Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <img src="pictures/logo.png" id="logo">
 
             <ul>
-                <a href=""><li>Youtube</li></a>
-                <a href=""><li>Nosotros</li></a>
-                <a href=""><li>Contacto</li></a>
+                <a href="www.google.com"><li>Youtube</li></a>
+                <a href="www.google.com"><li>Nosotros</li></a>
+                <a href="www.google.com"><li>Contacto</li></a>
             </ul>
 
         </nav>
